--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
     </header>
     <main class="content">
       <section class="profile page__section">
-        <div class="profile__image" style="background-image: url('<%=require('./images/avatar.jpg')%>')"></div>
+        <div class="profile__image"></div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button class="profile__edit-button" type="button"></button>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description"></p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
@@ -37,9 +37,29 @@
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="popup__form" name="edit-profile">
-          <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-          <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <form class="popup__form" name="edit-profile" novalidate>
+          <input 
+            type="text" 
+            pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" 
+            name="name" 
+            class="popup__input popup__input_type_name" 
+            placeholder="Имя" 
+            minlength="2" 
+            maxlength="40" 
+            required>
+            <span id="name-error" class="popup__input-error"></span>
+          <input 
+            type="text" 
+            pattern="^[a-zA-Zа-яА-ЯЁё\s\-\,]+$" 
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" 
+            name="description" 
+            class="popup__input popup__input_type_description" 
+            placeholder="Занятие" 
+            minlength="2" 
+            maxlength="200" 
+            required>
+            <span id="description-error" class="popup__input-error"></span>
           <button type="submit" class="button popup__button">Сохранить</button>
         </form>
       </div>
@@ -48,9 +68,25 @@
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Новое место</h3>
-        <form class="popup__form" name="new-place">
-          <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-          <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <form class="popup__form" name="new-place" novalidate>
+          <input 
+            type="text"
+            pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" 
+            name="place-name" 
+            class="popup__input popup__input_type_card-name" 
+            placeholder="Название"
+            minlength="2"
+            maxlength="30"
+            required>
+            <span id="place-name-error" class="popup__input-error"></span>
+          <input 
+            type="url" 
+            name="link" 
+            class="popup__input popup__input_type_url" 
+            placeholder="Ссылка на картинку" 
+            required>
+            <span id="link-error" class="popup__input-error"></span>
           <button type="submit" class="button popup__button">Сохранить</button>
         </form>
       </div>
@@ -61,6 +97,29 @@
         <img src="" alt="" class="popup__image">
         <p class="popup__caption"></p>
       </div>
+    </div>
+    <div class="popup popup_delete_card">
+      <div class="popup__content popup__delete-card-container">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <button type="button" class="button popup__button">Да</button>
+      </div>
+    </div>
+  </div>
+  <div class="popup popup_type_edit-image">
+    <div class="popup__content popup__edit-image-container">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновите аватар</h3>
+      <form class="popup__form" name="new-image" novalidate>
+        <input 
+          type="url" 
+          name="link" 
+          class="popup__input popup__input_type_url" 
+          placeholder="Ссылка на аватарку" 
+          required>
+          <span id="link-error" class="popup__input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
     </div>
   </div>
   
@@ -74,7 +133,10 @@
       <div class="card__description">
         <h2 class="card__title">
         </h2>
-        <button type="button" class="card__like-button"></button>
+        <div class="card__like">
+          <button type="button" class="card__like-button"></button>
+          <span class="card__like-count">0</span>
+        </div>
       </div>
     </li>
   </template>
